Adding Prime path junits.